DoaEngine v3.0
-Remove doa.ui
-Deprecate DoaObjectBuilder (doa.engine.scene)
-Deprecate DoaObjectInstantiationException (doa.engine.scene)
-Remove DoaEngineInstanceException (doa.engine.core)

+Add doa.engine.physics for physics based game programming
+Add doa.engine.utils.discordapi for Discord Rich Presence Support
+Add doa.engine.net for multiplayer game programming
+Implement mp3/ogg/etc. support to DoaSounds
+Adapt JavaFX way of initializing DoaEngine

*Compile project with JDK 15
*Simplify DoaVectorI/F/D -> DoaVector
*Change licence from MIT to AGPLv3
*Move source code from src/main/java/com/doa to src/main/java/doa
*Update Javadoc

and the things I missed 🤷